add: more verifications; update model and routes for private todos; new controller, middleware, service for work private routes

--- a/package.json
+++ b/package.json
@@ -1,21 +1,9 @@
 {
   "name": "todolist",
   "module": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon ./index.js",
-    "start": "node index.js"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
   "dependencies": {
     "@prisma/client": "6.4.1",
     "argon2": "^0.41.1",
-    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -24,5 +12,13 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1"
-  }
+  },
+  "peerDependencies": {
+    "typescript": "^5"
+  },
+  "scripts": {
+    "dev": "nodemon ./index.js",
+    "start": "node index.js"
+  },
+  "type": "module"
 }
